--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap-vue": "^2.21.2",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.4",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
