--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
+    "vue-router": "^3.5.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
